# yuptoo

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.upstream  Makefile  Pipfile  README.md  app.py  artifacts.lock.yaml  build_deploy.sh  clowdapp.yaml  full-stack-dev.yml  main.py  mkdocs.yml  pr_check.sh  py-pkg-deps-in-container.sh  pyproject.toml  pytest.ini  rebuild-hermetic.sh  renovate.json  requirements-build.in  requirements-build.txt  requirements-extras.txt  requirements.txt  rpms.in.yaml  rpms.lock.yaml  sequence.puml  stage-smoke.yaml  ubi.repo
.github/workflows/: commit_checker.yaml  container-publish.yaml  integrate.yaml
.hermetic_builds/: README.md  add_manual_build_dependencies.sh  generate_requirements_build.sh  prep_python_build_container_dependencies.sh
.tekton/: iop-yuptoo-sat-6-18-pull-request.yaml  iop-yuptoo-sat-6-18-push.yaml  iop-yuptoo-sat-6-19-pull-request.yaml  iop-yuptoo-sat-6-19-push.yaml  yuptoo-pull-request.yaml  yuptoo-push.yaml  yuptoo-sc-pull-request.yaml  yuptoo-sc-push.yaml
dashboards/: grafana-dashboard-insights-yuptoo-general.configmap.yaml
doc/: dev_environment.md
docs/: antora.yml  ephemeral_environment.md  index.adoc  index.md  local_environment.md  tar_archive_details.md  yuptoo_yupana.adoc  yuptoo_yupana.md
scripts/: cdappconfig.json  change_uuids  change_uuids.py  docker-compose.yml  full-stack-mac.yml  full-stack.yml
tests/: utils.py
tests/modifiers/: test_add_host_facts.py  test_remove_display_name.py  test_remove_empty_ip_addresses.py  test_remove_installed_packages.py  test_remove_invalid_bios_uuid.py  (+8 more)
(+53 files in other folders)
